# polkupyoran-takavalo

.github/workflows/: rust.yml
kicad/: polkupyörän-takavalo.kicad_pcb  polkupyörän-takavalo.kicad_pro  polkupyörän-takavalo.kicad_sch
kicad/bom/: ibom.html
kicad/jlcpcb/: project.db
rust/takavalo/: Cargo.toml  README.md  build.rs  memory.x  rust-toolchain.toml
rust/takavalo/.cargo/: config.toml
rust/takavalo/src/: main.rs
