[package]
edition = "2021"
name = "takavalo"
version = "0.1.0"
authors = ["Mikko Viitamäki"]
resolver = "2"

[dependencies]
# Change stm32g030f6 to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "time-driver-any", "stm32g030f6", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.5.0",  features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
# embassy-usb = { version = "0.2.0", default-features = false, features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
portable-atomic = { version = "1.5", features = ["unsafe-assume-single-core"] }

[profile.release]
debug = 2
strip = "debuginfo"
